# spanning-tree

./: .gitignore  CMakeLists.txt  README.md  compile.sh  edges.txt
src/: DoubleLinkedList.c  DoubleLinkedList.h  Queue.c  Queue.h  Spanning.c  Sparse.c  Sparse.h  main.c
src/double_linked_list/: DoubleLinkedList.c  DoubleLinkedList.h
src/includes/: double_linked_list.h  graph.h  queue.h  sparse.h
src/lib/: double_linked_list.c  graph.c  queue.c  sparse.c
src/queue/: Queue.c  Queue.h
src/sparse/: Sparse.c  Sparse.h
